# haptic_ws

devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/gazebo_joint_torsional_spring/: build.check.004.log.stderr  build.check.035.log.stderr
logs/planar_structure/: build.check.057.log.stderr
logs/rotors_control/: build.check.218.log.stderr  build.make.040.log.stderr  build.make.047.log.stderr  build.make.062.log.stderr  build.make.069.log.stderr  build.make.077.log.stderr  build.make.081.log.stderr  build.make.082.log.stderr  build.make.105.log.stderr  build.make.106.log.stderr  build.make.107.log.stderr  build.make.122.log.stderr  build.make.139.log.stderr  build.make.146.log.stderr  build.make.157.log.stderr  build.make.214.log.stderr  build.make.217.log.stderr  build.make.237.log.stderr  build.make.238.log.stderr  (+4 more)
src/planar_structure/: CMakeLists.txt  package.xml  urdf.rviz
src/planar_structure/config/: joint_names_structure_haptic_drone.yaml
src/planar_structure/launch/: display.launch  gazebo.launch
src/planar_structure/meshes/: base_link.STL  roll_link.STL  tree_branch.STL  vertical_link.STL
src/planar_structure/urdf/: inclined_obstacle.xacro  inclined_obstacle_cylinder.xacro  obstacle_link_joint.xacro  obstacle_parameters.xacro  planar_structure.urdf  spring.gazebo  vertical_obstacle.xacro  vertical_obstacle_closer.xacro  vertical_obstacle_closer_cylinder.xacro  vertical_obstacle_cylinder.xacro  vertical_obstacle_higher.xacro  vertical_obstacle_higher_cylinder.xacro
(+445 files in other folders)
